testsuite/tests/parser/should_fail/T12811.stderr

T12811.hs:5:15: error:
    Illegal operator ‘.’ in type ‘foral a . a’
      Use TypeOperators to allow operators in types

T12811.hs:5:15: error: Not in scope: type constructor or class ‘.’
